--- a/nginx/sites/default.conf
+++ b/nginx/sites/default.conf
@@ -1,7 +1,10 @@
 server {
 
-    listen 80 default_server;
+    listen 443 ssl default_server;
     listen [::]:80 default_server ipv6only=on;
+
+    ssl_certificate     www.gymforgym.dev.crt;
+    ssl_certificate_key www.gymforgym.dev.key;
 
     server_name laradock;
     root /var/www/public;
@@ -23,6 +26,3 @@ server {
         deny all;
     }
 }
-
-
-
